@@ -53,7 +53,7 @@ import java.io.ObjectStreamException;
  * @author Andrew John Hughes (gnu_andrew@member.fsf.org)
  * @since 1.5
  */
-public class SimpleType
+public final class SimpleType
   extends OpenType
 {
 
