@@ -1,3 +1,12 @@
+2006-08-05  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* javax/management/MBeanFeatureInfo.java:
+	Make string variable package-private.
+	* javax/management/StandardMBean.java:
+	(getMBeanInterface()): Made final.
+	* javax/management/openmbean/SimpleType.java:
+	Made final.
+
 2006-08-05  Roman Kennke  <kennke@aicas.com>
 
 	* javax/swing/plaf/basic/BasicTextUI.java
